tests/error_corpus/validation_errors/not_implemented/E203_invalid_form_type.cha
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|corpus|CHI|||||Target_Child|||
@Comment:	ERROR: Form type must be valid (b, c, d, etc.)
@Comment:	Invalid: 'hello@invalid' - Unknown form type
*CHI:	hello@xyz .
@End
